tests/js_error/source_locations/statement/for_await/await_throws_module.js
let promise = new Promise(() => {});
Object.defineProperty(promise, 'constructor', { get() { throw new Error(); } });

var iterable = {
  [Symbol.asyncIterator]() {
    return {
      next() {
        return promise;
      }
    }
  }
};

async function foo() {
  for await (var x of iterable) {}
}

await foo();